--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -16,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +18,22 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-  #  - name: Update dependency graph
-   #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Run tests with Maven
+      run: mvn test --file pom.xml
+
+    - name: Build with Maven without running tests
+      run: mvn -B package -DskipTests --file pom.xml
+
+    - name: Set execute permission for make_html.sh
+      run: chmod +x make_html.sh
+
+    - name: Generate HTML
+      run: ./make_html.sh
+
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages # La branche où le contenu sera déployé
+        folder: wwwroot # Le dossier dont le contenu sera déployé
+        token: ${{ secrets.GITHUB_TOKEN }} # GitHub crée automatiquement ce secret pour authentifier dans vos workflows
